--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,4 +2,10 @@
 <resources>
 
     <style name="Theme.SmartStep" parent="android:Theme.Material.Light.NoActionBar" />
+
+    <style name="Theme.SmartStepSplashScreen" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">#E4F0FB</item>
+        <item name="postSplashScreenTheme">@style/Theme.SmartStep</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/splash_icon</item>
+    </style>
 </resources>
